Fixed bug #34103 (line numbering not maintained in dom document)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@193524 c90b9560-bf6c-de11-be94-00142212c4b1